Closed Bug 449653 Opened 18 years ago Closed 18 years ago

drawWindow on canvas fails on load, draws white instead of specified region

Categories

(Core :: Graphics: Canvas2D, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1a2

People

(Reporter: martijn.martijn, Assigned: martijn.martijn)

References

Details

(Keywords: testcase)

Attachments

(2 files)

Attached file testcase
See testcase, it uses enhanced privileges, so you need to download it to your computer. Canvas.drawWindow draws white for some reason after an onload event, while it just works fine if you use the method after the page has loaded.
So our display list builder IsBackgroundOnly(). We should really unsuppress painting _before_ firing onload, shouldn't we?
Alternately, we should ignore paint suppression for drawWindow or something.
Martijn, can you write the patch? Just make nsPresShell::RenderDocument set nsDisplayListBuilder's mIsBackgroundOnly to false, via a new setter method in nsDisplayListBuilder.
Attached patch patchSplinter Review
The reftest getting checked in would depend on bug 448676 or related one being fixed.
Attachment #334119 - Flags: review?(roc)
Comment on attachment 334119 [details] [diff] [review] patch I assume you tested this and it works :-)
Attachment #334119 - Flags: superreview+
Attachment #334119 - Flags: review?(roc)
Attachment #334119 - Flags: review+
Assignee: nobody → martijn.martijn
Depends on: 448676
Pushed this, with the test disabled. The test I added in bug 449781 handles testing this, but I think we should still get the reftests in.
Status: NEW → RESOLVED
Closed: 18 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1a2
OS: Windows XP → All
Hardware: PC → All
Depends on: 527804
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: