Bug 449653.  Make drawWindow work even inside an onload handler (so before we've unsuppressed painting), r+sr=roc